--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,6 @@ Repository = "https://github.com/sakura1bgx/ComfyUI_FlipStreamViewer"
 #  Used by Comfy Registry https://comfyregistry.org
 
 [tool.comfy]
-PublisherId = ""
+PublisherId = "sakura1bgx"
 DisplayName = "ComfyUI_FlipStreamViewer"
 Icon = ""
