--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [project]
 name = "comfyui_flipstreamviewer"
 description = "ComfyUI_FlipStreamViewer is a tool that provides a viewer interface for flipping images with frame interpolation, allowing you to watch high-fidelity pseudo-videos without needing AnimateDiff. Please note that this tool is not designed with security measures against third-party attacks. Therefore, it should only be used for personal purposes within a secure network."
-version = "1.1.0"
-license = {file = "LICENSE"}
+version = "1.2.0"
+license = {file = "LICENSE.txt"}
 
 [project.urls]
 Repository = "https://github.com/sakura1bgx/ComfyUI_FlipStreamViewer"
